tests/neg/override-extension_normal-methods.check
-- Error: tests/neg/override-extension_normal-methods.scala:6:6 --------------------------------------------------------
6 |  def m[T](x: T): String  = "normal method" // error: normal method, cannot override an extension method. Also needs `override' modifier (but this error should be obfuscated).
  |      ^
  |      error overriding method m in trait A of type [T](t: T): String;
  |        method m of type [T](x: T): String is a normal method, cannot override an extension method
-- Error: tests/neg/override-extension_normal-methods.scala:14:6 -------------------------------------------------------
14 |  def [T](t: T).m: String = "extrnsion method" // error: extension method, cannot override an normal method. Also needs `override' modifier (but this error should be obfuscated).
   |      ^
   |      error overriding method m in trait B of type [T](x: T): String;
   |        method m of type [T](t: T): String is an extension method, cannot override a normal method
